--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,48 @@
     background-image: url('../assets/images/bg-gradient.jpg');
 }
 
+.header{
+    background-color: #0000002a;
+    height: 12vh;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-right: 3vw;
+}
+
+.input-container {
+    border: 1px solid white;
+    border-radius: 0.25rem;
+    padding: 6px 8px;
+    justify-content: center;
+}
+
+.search-input {
+    color: white;
+    border: none;
+    border-radius: 4px;
+    width: 16vw;
+    background-color: transparent;
+    border-color: transparent;
+    outline: none;
+}
+
+.full-logo-header{
+    height: 12vh;
+    padding: 2vh;
+    padding-left: 3vw;
+}
+
+.buttons-header{
+    align-items: center;
+    display: flex;
+}
+
+.buttons-header-item{
+    margin-right: 8px;
+    text-align: center;
+}
+
 /* LOGIN PAGE */
 
 .login-form-container {
@@ -123,3 +165,4 @@
     color: #6A26AC;
     font-weight: bold;
 }
+
