--- a/view/all-movies.html
+++ b/view/all-movies.html
@@ -4,18 +4,24 @@
         <div class="buttons-header">
             <div class="input-container" style="margin-right: 20px;">
                 <img src="../assets/images/search.svg">
-                <input class="search-input" type="text" placeholder="pesquise aqui...">
+                <input class="search-input" type="text" placeholder="pesquise aqui..." ng-model="busca">
             </div>
-            <button class="buttons-header-item form-control btn btn-outline-light" style="width: 6vw;">movies</button>
-            <button class="buttons-header-item  form-control btn btn-outline-light" style="width: 6vw;">profile</button>
+            <button class="buttons-header-item form-control btn btn-outline-light" style="width: 6vw;"ui-sref="all-movies">movies</button>
+            <button id="far-right-button" class="buttons-header-item  form-control btn btn-outline-light"
+                style="width: 6vw;">profile</button>
         </div>
     </header>
-    <div>
-        <ul>
-            <li ng-repeat="movie in movies">
-
-            </li>
-
-        </ul>
+    <div class="bestMovies-container">
+        <h1 class="bestMovies-text">Top 20 movies:</h1>
+    </div>
+    <div class="grid-container">
+        <section class="grid-item" ng-repeat="cover in covers | filter: busca">
+            <a class="card-image" ng-href="#!/movies/{{cover.movie.id}}">
+                <img id="card-img" ng-src="../assets/covers/{{cover.filename}}">
+                <div class="divRating">
+                    <p class="movieRating">{{cover.movie.rating| number:1 }}</p>
+                </div>
+            </a>
+        </section>
     </div>
 </div>
