--- a/view/all-movies.html
+++ b/view/all-movies.html
@@ -4,12 +4,12 @@
         <div class="buttons-header">
             <div class="input-container" style="margin-right: 20px;">
                 <img src="../assets/images/search.svg">
-                <input class="search-input" type="text" placeholder="pesquise aqui..." ng-model="buscarFilmes" ng-change="busca()">
+                <input class="search-input" type="text" placeholder="search movies..." ng-model="buscarFilmes" ng-change="busca()">
             </div>
             <button class="buttons-header-item form-control btn btn-outline-light" style="width: 6vw;" ui-sref="all-movies">movies</button>
             <button class="buttons-header-item  form-control btn btn-outline-light"
             ui-sref="profile"   style="width: 6vw;">profile</button>
-            <button class="buttons-header-item form-control btn btn-primary" style="width:6vw" ui-sref="login">log out</button>
+            <button class="buttons-header-item form-control btn btn-primary" style="width:6vw" ng-click="logOut()" >log out</button>
         </div>
     </header>
     <div class="bestMovies-container">
