--- a/view/show-movie.html
+++ b/view/show-movie.html
@@ -3,7 +3,7 @@
         <img class="full-logo-header" src="../assets/images/fullMovies.png">
         <div class="buttons-header">
             <button class="buttons-header-item form-control btn btn-outline-light" style="width: 6vw;"
-                ui-sref="all-movies">return</button>
+                ui-sref="all-movies">movies</button>
             <button class="buttons-header-item  form-control btn btn-outline-light"style="width: 6vw;"ui-sref="profile">profile</button>
             <button class=" buttons-header-item form-control btn btn-primary" style="width:6vw" ui-sref="login">log out</button>
         </div>
@@ -21,8 +21,13 @@
                 <p class="movie-info">Genre: {{cover.movie.genre}}</p>
             </div>
             <p class="movie-info-synopsis">{{cover.movie.synopsis}}</p>
-            <button class="buttons-show-item form-control btn btn-outline-light" style="width: 6vw;"
-                ui-sref="">add</button>
+            <div>
+                <button class="buttons-show-item form-control btn btn-outline-light" style="width:max-content;margin-right: -1vw;" 
+                    ui-sref="">add to profile</button>
+                <button class="buttons-show-item form-control btn btn-outline-light" style="width:max-content"
+                    ui-sref="">remove from profile</button>
+
+            </div>
         </div>
     </div>
 
