--- a/view/show-movie.html
+++ b/view/show-movie.html
@@ -5,7 +5,7 @@
             <button class="buttons-header-item form-control btn btn-outline-light" style="width: 6vw;"
                 ui-sref="all-movies">movies</button>
             <button class="buttons-header-item  form-control btn btn-outline-light"style="width: 6vw;"ui-sref="profile">profile</button>
-            <button class=" buttons-header-item form-control btn btn-primary" style="width:6vw" ui-sref="login">log out</button>
+            <button class=" buttons-header-item form-control btn btn-primary" style="width:6vw" ng-click="logOut()">log out</button>
         </div>
     </header>
     <div class="main-div-show">
