--- a/view/profile.html
+++ b/view/profile.html
@@ -2,16 +2,20 @@
     <header class="header">
         <img class="full-logo-header" src="../assets/images/fullMovies.png">
         <div class="buttons-header">
-            <div class="input-container" style="margin-right: 20px;">
+            <div class="input-container" style="margin-right: 20px; display: flex;">
                 <img src="../assets/images/search.svg">
-                <input  class="search-input" type="text" placeholder="search users..." ng-model="buscarUsers" ng-change="buscaUsers()"
-                uib-typeahead="user.username for user in users | filter: $viewValue"
-                ng-click="">
+                <input class="search-input" type="text" placeholder="search users..." ng-model="buscarUsers"
+                    ng-change="buscaUsers()"
+                    uib-typeahead="user as user.username for user in users | filter:{username:$viewValue}"
+                    typeahead-template-url="view/customTemplate.html" typeahead-show-hint="true"
+                    typeahead-on-select="refresh(buscarUsers)" style="color: black; margin-left: 15px; border-radius: 0%; width: 300px;">
             </div>
-            <button class="buttons-header-item form-control btn btn-outline-light" style="width: 6vw;" ui-sref="all-movies">return</button>
-            <button class="buttons-header-item  form-control btn btn-outline-light"
-            ui-sref="profile"   style="width: 6vw;">profile</button>
-            <button class="buttons-header-item form-control btn btn-primary" style="width:6vw" ng-click="logOut()">log out</button>
+            <button class="buttons-header-item form-control btn btn-outline-light" style="width: 6vw;"
+                ui-sref="all-movies" >return</button>
+            <button class="buttons-header-item  form-control btn btn-outline-light" ui-sref="profile"
+                style="width: 6vw;">profile</button>
+            <button class="buttons-header-item form-control btn btn-primary" style="width:6vw" ng-click="logOut()">log
+                out</button>
         </div>
     </header>
     <div class="main-div-profile">
@@ -22,10 +26,13 @@
                 <p class="profile-info">total time: {{user.total_time}} minutes</p>
             </div>
             <div>
-                <button class="buttons-show-item form-control btn btn-outline-light" style="width: max-content; margin-right: -35px" ui-sref="all-movies">add new movies</button>
-                <button class="buttons-show-item form-control btn btn-outline-light" style="width: max-content; margin-right: -35px" ui-sref="update-user">update user</button>
+                <button class="buttons-show-item form-control btn btn-outline-light"
+                    style="width: max-content; margin-right: -15px ;" ui-sref="all-movies">add new movies</button>
+                <button class="buttons-show-item form-control btn btn-outline-light" style="width: max-content;"
+                    ui-sref="update-user">update user</button>
             </div>
-            <button class="buttons-show-item form-control btn btn-light" style="width:fit-content" ng-click="deleteUser()">delete user</button>
+            <button class="buttons-show-item form-control btn btn-light" style="width:fit-content"
+                ng-click="deleteUser()">delete user</button>
         </div>
         <div class="grid-container-profile">
             <section class="grid-item" ng-repeat="watched in watcheds.allImages">
@@ -36,4 +43,3 @@
         </div>
     </div>
 </div>
-
