--- a/view/show-movie.html
+++ b/view/show-movie.html
@@ -23,7 +23,7 @@
             <p class="movie-info-synopsis">{{cover.movie.synopsis}}</p>
             <div>
                 <button class="buttons-show-item form-control btn btn-outline-light" style="width:max-content;margin-right: -1vw;" 
-                    ui-sref="">add to profile</button>
+                    ng-click="addWatched()">add to profile</button>
                 <button class="buttons-show-item form-control btn btn-outline-light" style="width:max-content"
                     ui-sref="">remove from profile</button>
 
