--- a/view/new-user.html
+++ b/view/new-user.html
@@ -26,9 +26,11 @@
             </div>
             <div class="login-container-form-item">
                 <button class="btn btn-block cadastro-button" ng-click="create()"
-                    ng-disabled="!userData.email || !userData.password || !userData.username|| !userData.confirmPassword">Confirmar registro</button>
+                    ng-disabled="!userData.email || !userData.password || !userData.username|| !userData.confirmPassword">Confirmar
+                    registro</button>
             </div>
-            <h6 class="login-cadastrar-usuario">Já tem uma conta? <a style="color: #C8A5E6;" href="index.html">voltar ao menu inicial</a>
+            <h6 class="login-cadastrar-usuario">Já tem uma conta? <a style="color: #C8A5E6;" href="index.html">voltar ao
+                    menu inicial</a>
         </form>
     </div>
 </div>
