--- a/view/show-movie.html
+++ b/view/show-movie.html
@@ -4,8 +4,10 @@
         <div class="buttons-header">
             <button class="buttons-header-item form-control btn btn-outline-light" style="width: 6vw;"
                 ui-sref="all-movies">movies</button>
-            <button class="buttons-header-item  form-control btn btn-outline-light"style="width: 6vw;"ui-sref="profile">profile</button>
-            <button class=" buttons-header-item form-control btn btn-primary" style="width:6vw" ng-click="logOut()">log out</button>
+            <button class="buttons-header-item  form-control btn btn-outline-light" style="width: 6vw;"
+                ui-sref="profile">profile</button>
+            <button class=" buttons-header-item form-control btn btn-primary" style="width:6vw" ng-click="logOut()">log
+                out</button>
         </div>
     </header>
     <div class="main-div-show">
@@ -22,8 +24,8 @@
             </div>
             <p class="movie-info-synopsis">{{cover.movie.synopsis}}</p>
             <div>
-                <button class="buttons-show-item form-control btn btn-outline-light" style="width:max-content;margin-right: -1vw;" 
-                    ng-click="addWatched()">add to profile</button>
+                <button class="buttons-show-item form-control btn btn-outline-light"
+                    style="width:max-content;margin-right: -1vw;" ng-click="addWatched()">add to profile</button>
                 <button class="buttons-show-item form-control btn btn-outline-light" style="width:max-content"
                     ui-sref="">remove from profile</button>
 
