--- a/view/update-user.html
+++ b/view/update-user.html
@@ -2,10 +2,12 @@
     <header class="header">
         <img class="full-logo-header" src="../assets/images/fullMovies.png">
         <div class="buttons-header">
-            <button class="buttons-header-item  form-control btn btn-outline-light"
-            ui-sref="profile"   style="width: 6vw;">return</button>
-            <button class="buttons-header-item form-control btn btn-outline-light" style="width: 6vw;" ui-sref="all-movies">movies</button>
-            <button class="buttons-header-item form-control btn btn-primary" style="width:6vw" ng-click="logOut()">log out</button>
+            <button class="buttons-header-item  form-control btn btn-outline-light" ui-sref="profile"
+                style="width: 6vw;">return</button>
+            <button class="buttons-header-item form-control btn btn-outline-light" style="width: 6vw;"
+                ui-sref="all-movies">movies</button>
+            <button class="buttons-header-item form-control btn btn-primary" style="width:6vw" ng-click="logOut()">log
+                out</button>
         </div>
     </header>
     <div class="container-atualizar">
@@ -23,7 +25,8 @@
                         placeholder="" />
                 </div>
                 <div class="login-container-form-item">
-                    <button class="btn btn-block cadastro-button" ng-click="updateUser(updateUserInfo)">Atualizar usuário</button>
+                    <button class="btn btn-block cadastro-button" ng-click="updateUser(updateUserInfo)">Atualizar
+                        usuário</button>
                 </div>
             </form>
         </div>
