--- a/view/customTemplate.html
+++ b/view/customTemplate.html
@@ -1,3 +1,4 @@
-<a >
-    <span style="color: black;" ng-bind-click="refresh()" ng-bind-html="match.label | uibTypeaheadHighlight:query"></span>
+<a>
+    <span style="color: black;" ng-bind-click="refresh()"
+        ng-bind-html="match.label | uibTypeaheadHighlight:query"></span>
 </a>
