--- a/view/show-movie.html
+++ b/view/show-movie.html
@@ -27,7 +27,7 @@
                 <button class="buttons-show-item form-control btn btn-outline-light"
                     style="width:max-content;margin-right: -1vw;" ng-click="addWatched()">add to profile</button>
                 <button class="buttons-show-item form-control btn btn-outline-light" style="width:max-content"
-                    ui-sref="">remove from profile</button>
+                    ng-click="removeWatched()">remove from profile</button>
 
             </div>
         </div>
