--- a/css/profile.css
+++ b/css/profile.css
@@ -2,6 +2,7 @@
     display: flex;
     align-items: center;
     margin-top: 12vh;
+    margin-left: -3vw
 }
 
 .text-div-profile {
@@ -11,7 +12,7 @@
     background-color: rgba(255, 255, 255, 0.036);
     border-radius: 0.25rem;
     height: 60vh;
-    width: 30vw;
+    width: 28vw;
     margin-left: 5vw;
 }
 
@@ -26,6 +27,7 @@
 .profile-info {
     color: white;
     margin-left: 2vw;
+    margin-right: -1vw;
     font-weight: bold;
     font-size: 15px;
     margin-top: 1vh;
@@ -35,6 +37,11 @@
 .grid-container-profile {
     display: grid;
     align-items: center;
-    grid-template-columns: repeat(7, 8.2vw);
-    margin-left: 2vw;
+    grid-template-columns: repeat(10, 6.8vw);
+    margin-left: 1vw;
+}
+
+#card-img-profile{
+    height: 19vh;
+    width: 6.3vw;
 }
