--- a/view/all-movies.html
+++ b/view/all-movies.html
@@ -28,4 +28,7 @@
             </a>
         </section>
     </div>
+    <div class="admin-addMovie-div">
+        <button ng-if="isAdminUser" class="buttons-add-item-admin form-control btn btn-outline-light" ng-click="">add movie</button>
+    </div>
 </div>
