--- a/css/home-Movies.css
+++ b/css/home-Movies.css
@@ -14,6 +14,7 @@
     display: grid;
     align-items: center;
     grid-template-columns: repeat(10, 9.8vw);
+    justify-content: center;
 }
 
 .grid-item {
@@ -60,6 +61,19 @@
 .bestMovies-text {
     color: white;
     font-size: 30px;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: bolder;
+}
+
+.admin-addMovie-div{
+    text-align: center;
+    margin-top: 2vh;
+}
+
+.buttons-add-item-admin{
+    height: 5vh;
+    width: 10vw;
+    font-size: 18px;
     font-family: 'Montserrat', sans-serif;
     font-weight: bolder;
 }
