--- a/view/profile.html
+++ b/view/profile.html
@@ -7,9 +7,7 @@
                 <input class="search-input" type="text" placeholder="search users..." ng-model="buscarUsers"
                     ng-change="buscaUsers()"
                     uib-typeahead="user as user.username for user in users | filter:{username:$viewValue}"
-                    typeahead-template-url="view/customTemplate.html" typeahead-show-hint="true"
-                    typeahead-on-select="refresh(buscarUsers)"
-                    style="color: black; margin-left: 15px; border-radius: 0%; width: 300px;">
+                    typeahead-template-url="view/customTemplate.html" typeahead-on-select="refresh(buscarUsers)">
             </div>
             <button class="buttons-header-item form-control btn btn-outline-light" style="width: 6vw;"
                 ui-sref="all-movies">return</button>
@@ -22,19 +20,19 @@
     <div class="main-div-profile">
         <div class="text-div-profile">
             <p class="profile-info-title">{{user.username}}</p>
-            
+
             <div class="organize-info" style="display: flex; margin-top: -25px;">
                 <p class="profile-info">most watched genre: {{user.most_watched_genre}} </p>
-                <p class="profile-info">total time: {{user.total_time}} minutes</p>
+                <p class="profile-info" >total time: {{user.total_time}} minutes</p>
             </div>
             <div>
                 <button class="buttons-show-item form-control btn btn-outline-light"
-                    style="width: max-content; margin-right: -15px ;" ui-sref="all-movies">add new movies</button>
+                    style="width: max-content; margin-right: -15px ;" ui-sref="all-movies" ng-if="showButtons">add new movies</button>
                 <button class="buttons-show-item form-control btn btn-outline-light" style="width: max-content;"
-                    ui-sref="update-user">update user</button>
+                    ui-sref="update-user" ng-if="showButtons">update user</button>
             </div>
             <button class="buttons-show-item form-control btn btn-light" style="width:fit-content"
-                ng-click="deleteUser()">delete user</button>
+                ng-click="deleteUser()" ng-if="showButtons">delete user</button>
         </div>
         <div class="grid-container-profile">
             <section class="grid-item" ng-repeat="watched in watcheds.allImages">
