--- a/view/show-movie.html
+++ b/view/show-movie.html
@@ -33,7 +33,7 @@
                 <button class="buttons-show-item form-control btn btn-outline-light" style="width:8vw"
                     ng-click="removeWatched()" ng-if="watched && !isAdminUser">remove</button>
                 <button class="buttons-show-item form-control btn btn-outline-light" style="width:10vw; margin-right: -1.5vw;"
-                    ng-click="" ng-show="isAdminUser">delete the movie</button>
+                     ng-show="isAdminUser" ng-click="deleteMovie()">delete the movie</button>
                 <button class="buttons-show-item form-control btn btn-outline-light" style="width:10vw"
                     ng-click="" ng-show="isAdminUser">update the movie</button>
             </div>
