--- a/view/all-movies.html
+++ b/view/all-movies.html
@@ -29,6 +29,6 @@
         </section>
     </div>
     <div class="admin-addMovie-div">
-        <button ng-if="isAdminUser" class="buttons-add-item-admin form-control btn btn-outline-light" ng-click="">add movie</button>
+        <button ng-if="isAdminUser" class="buttons-add-item-admin form-control btn btn-outline-light" ui-sref="create-movie">add movie</button>
     </div>
 </div>
