--- a/view/show-movie.html
+++ b/view/show-movie.html
@@ -35,9 +35,8 @@
                 <button class="buttons-show-item form-control btn btn-outline-light" style="width:10vw; margin-right: -1.5vw;"
                      ng-show="isAdminUser" ng-click="deleteMovie()">delete the movie</button>
                 <button class="buttons-show-item form-control btn btn-outline-light" style="width:10vw"
-                    ng-click="" ng-show="isAdminUser">update the movie</button>
+                    ng-click="goUpdateMovie()" ng-show="isAdminUser">update the movie</button>
             </div>
         </div>
     </div>
-
 </div>
