--- a/view/profile.html
+++ b/view/profile.html
@@ -4,12 +4,13 @@
         <div class="buttons-header">
             <div class="input-container" style="margin-right: 20px; display: flex;">
                 <img src="../assets/images/search.svg">
-                <input class="search-input" type="text" style="width:16vw" placeholder="search users..." ng-model="buscarUsers"
-                    ng-change="buscaUsers()"
+                <input class="search-input" type="text" style="width:16vw" placeholder="search users..."
+                    ng-model="buscarUsers" ng-change="buscaUsers()"
                     uib-typeahead="user as user.username for user in users | filter:{username:$viewValue}"
                     typeahead-template-url="view/customTemplate.html" typeahead-on-select="refresh(buscarUsers)">
             </div>
-            <button class="buttons-header-item form-control btn btn-outline-light" style="width:8vw" ng-click="buscaUsers()" ng-if="isAdmin" ui-sref="every-user">find all users</button>
+            <button class="buttons-header-item form-control btn btn-outline-light" style="width:8vw"
+                ng-click="buscaUsers()" ng-if="isAdmin" ui-sref="every-user">find all users</button>
             <button class="buttons-header-item form-control btn btn-outline-light" style="width: 6vw;"
                 ui-sref="all-movies">return</button>
             <button class="buttons-header-item  form-control btn btn-outline-light" ui-sref="profile"
@@ -24,18 +25,21 @@
 
             <div class="organize-info" style="display: flex; margin-top: -25px;">
                 <p class="profile-info">most watched genre: {{user.most_watched_genre}} </p>
-                <p class="profile-info" >total time: {{user.total_time}} minutes</p>
+                <p class="profile-info">total time: {{user.total_time}} minutes</p>
             </div>
             <div>
                 <button class="buttons-show-item form-control btn btn-outline-light"
-                    style="width: max-content; margin-right: -15px ;" ui-sref="all-movies" ng-if="showButtons && !isAdmin">add new movies</button>
+                    style="width: max-content; margin-right: -15px ;" ui-sref="all-movies"
+                    ng-if="showButtons && !isAdmin">add new movies</button>
                 <button class="buttons-show-item form-control btn btn-outline-light" style="width: max-content;"
                     ui-sref="update-user" ng-if="showButtons && !isAdmin">update user</button>
+                <button class="buttons-show-item form-control btn btn-light" style="width:fit-content"
+                    ng-click="deleteOtherUser()" ng-if="isAdmin && !showButtons">delete this user</button>
+                <button class="buttons-show-item form-control btn btn-outline-light" style="width: max-content;"
+                    ng-click="makeAdmin()" ng-if="!showButtons && isAdmin">make admin</button>
             </div>
             <button class="buttons-show-item form-control btn btn-light" style="width:fit-content"
                 ng-click="deleteUser()" ng-if="showButtons">delete user</button>
-            <button class="buttons-show-item form-control btn btn-light" style="width:fit-content"
-                ng-click="deleteOtherUser()" ng-if="isAdmin && !showButtons">delete this user</button>
         </div>
         <div class="grid-container-profile">
             <section class="grid-item" ng-repeat="watched in watcheds.allImages">
