--- a/view/manage-movie.html
+++ b/view/manage-movie.html
@@ -34,16 +34,27 @@
                     <label for="synopsis">synopsis</label>
                     <input class="form-control" ng-model="movieData.synopsis" ng-required="true" />
                 </div>
-                <!-- <div class="login-container-form-item" style="display: flex; flex-direction:column;">
-                    <label for="cover">cover</label>
-                    <div class="custom-file">
-                        <input type="file" class="custom-file-input" id="inputGroupFile01">
-                        <label class="custom-file-label" for="inputGroupFile01" ng-model="movieData.cover" ng-required="true">Choose file</label>
-                    </div>
-                </div> -->
                 <div class="login-container-form-item">
                     <button class="btn btn-block cadastro-button" ng-click="actionFunction()"
                         ng-disabled="!movieData.name || !movieData.director || !movieData.genre|| !movieData.time || !movieData.synopsis">Confirmar</button>
+                </div>
+                <div ng-show="idEdit">
+                    <form>
+                        <form>
+                          <input
+                            name="file"
+                            class="register__input-password"
+                            select-ng-files
+                            placeholder="Imagem Url"
+                            id="fileTobase64"
+                            type="file"
+                            ng-model="formCar.img"
+                            accept="image/png, image/jpeg"
+                            onchange="angular.element(this).scope().encodeImageFileAsURL(this)"
+                          />
+                          <img  id="imgTest" />
+                        </form>
+                  </form>
                 </div>
             </form>
         </div>
