--- a/view/manage-movie.html
+++ b/view/manage-movie.html
@@ -38,7 +38,7 @@
                     <button class="btn btn-block cadastro-button" ng-click="actionFunction()"
                         ng-disabled="!movieData.name || !movieData.director || !movieData.genre|| !movieData.time || !movieData.synopsis">Confirmar</button>
                 </div>
-                <div ng-show="idEdit">
+                <div ng-show="idEdit" class="input-image">
                     <form>
                         <form>
                           <input
