--- a/css/manage-movies.css
+++ b/css/manage-movies.css
@@ -42,3 +42,11 @@
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-weight: bolder;
 }
+
+.input-image{
+    margin-top: 30px;
+    background-color: white;
+    color: black;
+    padding: 8px;
+    border-radius: 0.25rem;
+}
