--- a/view/login.html
+++ b/view/login.html
@@ -15,7 +15,7 @@
                     <label for="password">Password</label>
                     <input class="form-control" type="password" ng-model="user.password" ng-minlength="6"
                         ng-required="true" placeholder="" />
-                    <h6 class="login-esqueceu-senha"><a ui-sref="recuperar">esqueci minha senha</a>
+                    <h6 class="login-esqueceu-senha"><a ui-sref="recover">esqueci minha senha</a>
                     </h6>
                 </div>
                 <div class="login-container-form-item">
