--- a/view/password-recover.html
+++ b/view/password-recover.html
@@ -9,9 +9,8 @@
                 <input class="form-control" type="email" ng-model="form.email" ng-required="true"
                     placeholder="" />
             </div>
-            <div class="login-container-form-item">
-                <button class="btn btn-block cadastro-button" ng-click="submitForm()"
-                    >Confirmar</button>
+            <div class="login-container-form-item" >
+                <button class="btn btn-block login-btn" ng-click="submitForm()" ng-disabled="!form.email">Confirmar</button>
             </div>
             <h6 class="login-cadastrar-usuario"><a style="color: #C8A5E6;" href="index.html">voltar ao
                     menu inicial</a>
