--- a/css/manage-movies.css
+++ b/css/manage-movies.css
@@ -2,10 +2,10 @@
     display: flex;
     border-radius: 15px;
     background-color: #3213635a;
-    height: 80vh;
+    height: 84vh;
     width: 40vw;
     margin: auto;
-    margin-top: 5vh;
+    margin-top: 1.5vh;
     align-items: center;
     justify-content: center;
     border: #40187550;
@@ -15,38 +15,33 @@
     font-weight: bold;
 }
 
-.full-logo-container {
-    display: flex;
-    width: 100%;
-    justify-content: center;
-}
-
 .cadastro-button {
-    margin-top: 30px;
     background-color: #6A26AC;
     color: white;
     font-weight: bold;
 }
 
 .cadastro-button:hover {
-    margin-top: 30px;
     background-color: #ffffff;
     color: #6A26AC;
     font-weight: bold;
 }
 
 .title-admin {
+    margin-top: 20px;
     text-align: center;
-    margin-bottom: 4vh;
-    font-size: 40px;
+    font-size: 35px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-weight: bolder;
 }
 
 .input-image{
-    margin-top: 5px;
     background-color: white;
     color: black;
     padding: 10px;
     border-radius: 0.25rem;
+}
+
+.login-container-form-item{
+    height: 65px;
 }
