--- a/css/profile.css
+++ b/css/profile.css
@@ -37,11 +37,23 @@
 .grid-container-profile {
     display: grid;
     align-items: center;
-    grid-template-columns: repeat(9, 6.8vw);
+    grid-template-columns: repeat(10, 6.3vw);
     margin-left: 10px;
 }
 
 #card-img-profile{
-    height: 19vh;
-    width: 6.3vw;
+    height: 18vh;
+    width: 6vw;
+}
+
+#card-img-profile-all{
+    height: 21vh;
+    width: 7vw;
+}
+
+.grid-container-profile-all{
+    display: grid;
+    align-items: center;
+    grid-template-columns: repeat(12, 8vw);
+    margin-left: 10px;
 }
