--- a/view/profile.html
+++ b/view/profile.html
@@ -21,10 +21,10 @@
     </header>
     <div class="main-div-profile">
         <div class="text-div-profile">
-            <p class="profile-info-title">{{user.username}}</p>
+            <p class="profile-info-title">{{user.username | limitTo: 15}}</p>
 
             <div class="organize-info" style="display: flex; margin-top: -25px;">
-                <p class="profile-info">most watched genre: {{user.most_watched_genre}} </p>
+                <p class="profile-info">most watched genre: {{user.most_watched_genre | limitTo: 20}}</p>
                 <p class="profile-info">total time: {{user.total_time}} minutes</p>
             </div>
             <div>
@@ -42,11 +42,14 @@
                 ng-click="deleteUser()" ng-if="showButtons">delete user</button>
         </div>
         <div class="grid-container-profile">
-            <section class="grid-item" ng-repeat="watched in watcheds.allImages">
+            <section class="grid-item" ng-repeat="watched in watcheds.allImages  | limitTo: 30">
                 <a class="card-image" href="#!/movies/{{watched.movie_id}}">
                     <img id="card-img-profile" ng-src="../assets/covers/{{watched.filename}}">
                 </a>
             </section>
+            <button class="buttons-show-item form-control btn btn-outline-light"
+                style="width: max-content;margin-left: 5px;" ui-sref="all-user-movies"
+                ng-if="showButtons && !isAdmin">see all movies</button>
         </div>
     </div>
 </div>
