--- a/view/all-user-movies.html
+++ b/view/all-user-movies.html
@@ -7,7 +7,7 @@
                 <input class="search-input" style="width:16vw" type="text" placeholder="search watched movies..." ng-model="buscarWatched"
                     ng-change="busca()" ng-model-options="{ debounce: 500 }">
             </div>
-            <button class="buttons-header-item form-control btn btn-outline-light" style="width:8vw" ng-click="buscaUsers()" ng-if="isAdmin" ui-sref="every-user">find all users</button>
+            <button class="buttons-header-item form-control btn btn-outline-light" style="width:150px" ng-click="buscaUsers()" ng-if="isAdmin" ui-sref="every-user">find all users</button>
             <button class="buttons-header-item form-control btn btn-outline-light" style="width: 6vw;"
                 ui-sref="all-movies">movies</button>
             <button class="buttons-header-item  form-control btn btn-outline-light" ui-sref="profile"
