--- a/view/all-movies.html
+++ b/view/all-movies.html
@@ -1,4 +1,7 @@
-<div>
+<div class="gif-div" ng-show="loading">
+    <img class="gif-image" src="../assets/images/loading.gif">
+</div>
+<div ng-show="!loading ">
     <header class="header">
         <img class="full-logo-header" src="../assets/images/fullMovies.png">
         <div class="buttons-header">
