--- a/css/geral.css
+++ b/css/geral.css
@@ -49,3 +49,16 @@
     margin-right: 5px;
     text-align: center;
 }
+
+.gif-image {
+    width: 400px;
+    height: 350px;
+    opacity: 70%;
+}
+
+.gif-div {
+    display: flex;
+    justify-content:center;
+    height: 100vh;
+    align-items: center;
+}
