--- a/view/every-user.html
+++ b/view/every-user.html
@@ -1,4 +1,7 @@
-<div>
+<div class="gif-div" ng-show="loading">
+    <img class="gif-image" src="../assets/images/loading.gif">
+</div>
+<div ng-show="!loading">
     <header class="header">
         <img class="full-logo-header" src="../assets/images/fullMovies.png">
         <div class="buttons-header">
@@ -6,8 +9,7 @@
                 ui-sref="all-movies">movies</button>
             <button class="buttons-header-item  form-control btn btn-outline-light" ui-sref="profile"
                 style="width: 6vw;">profile</button>
-            <button class="buttons-header-item form-control btn btn-primary" style="width:6vw" ng-click="logOut()">log
-                out</button>
+            <button class="buttons-header-item form-control btn btn-primary" style="width:6vw" ng-click="logOut()">log out</button>
         </div>
     </header>
     <div class="bestMovies-container">
